--- a/IndiaTrails.API/appsettings.json
+++ b/IndiaTrails.API/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "IndiaTrailsDBConnectionString": "Data Source=localhost;Database=IndiaTrailsDB;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Command Timeout=30"
 
+  },
+  "Jwt": {
+    "Key": "YourSuperSecretKeyThatIsAtLeast32CharactersLong123456",
+    "Issuer": "https://localhost:7000",
+    "Audience": "https://localhost:7000"
   }
 }
